--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+	<% if current_user%>
+		<%= button_to "Logout", session_url, :method => "delete" %>
+	<% end %>
 <%= yield %>
 
 </body>
