--- a/app/assets/templates/notes/show.jst.ejs
+++ b/app/assets/templates/notes/show.jst.ejs
@@ -5,12 +5,11 @@
   <form class="edit_note_form" role="form">
     <div class="form-group">
       <label for="note_title">Title</label>
-      <input type="text" class="form-control" id="note_title" name="note[title]" value="<%= note.get("title") %>" placeholder="Untitled"%>
+      <input type="text" class="edit_note_content form-control" id="note_title" name="note[title]" value="<%= note.get("title") %>" placeholder="Untitled"%>
       <input type="hidden" name="note[notebook_id]" value="<%= Evernote.current_notebook.id %>">
       <label for="note_body">Body</label>
-      <textarea class="form-control" rows="10" name="note[body]"><%=note.get("body")%></textarea>
+      <textarea class="edit_note_content form-control" rows="10" name="note[body]"><%=note.get("body")%></textarea>
     </div>
-    <button type="submit" class="edit_note_submit btn btn-default">Save</button>
   </form>
 <% } %>
 
