fixed a bug with auto-save

--- a/app/assets/templates/notes/makeTags.jst.ejs
+++ b/app/assets/templates/notes/makeTags.jst.ejs
@@ -1,7 +1,7 @@
 <% if (tags) { %>
   <% tags.forEach(function(tag){ %>
     <button type="button" class="deleteTagging btn btn-default btn-xs" data-id="<%= tag.id %>">
-      <span><%= tag.name %><span>
+      <span><%= tag.name %> <span class="glyphicon glyphicon-remove"></span><span>
     </button>
   
   
