--- a/app/assets/templates/notebooks/index.jst.ejs
+++ b/app/assets/templates/notebooks/index.jst.ejs
@@ -3,7 +3,7 @@
   <% if (notebooks) { %>  
     <% notebooks.each(function(notebook){ %>
       <% if (!!Evernote.current_notebook.get("title") && notebook.id === Evernote.current_notebook.id) { %>
-        <li class="list-group-item">
+        <li class="list-group-item droppable" data-id="<%= notebook.id%>">
           <span class="notebook <%= notebook.id%> selected %>" data-id="<%= notebook.id%>"><span class="glyphicon glyphicon-book"></span> <%= notebook.get("title") %></span>
 
           <button type="button" class="pull-right deleteNotebook btn btn-default btn-xs" data-id="<%= notebook.id%>">
@@ -17,7 +17,7 @@
         
         </li>
       <% } else {%>
-        <li class="list-group-item">
+        <li class="list-group-item droppable" data-id="<%= notebook.id%>">
           <span class="notebook <%= notebook.id%> %>" data-id="<%= notebook.id%>"><span class="glyphicon glyphicon-book"></span> <%= notebook.get("title") %></span>
 
           <button type="button" class="pull-right deleteNotebook btn btn-default btn-xs" data-id="<%= notebook.id%>">
@@ -82,9 +82,46 @@
   <% } %>
   
 
-
-
-
-
   
 </ul>
+
+<script>
+$(function() {
+  $( ".droppable" ).droppable({
+    drop: function() {
+      var notebook_id = parseInt($(this).attr("data-id"));
+      var note_id = parseInt($(event.target).attr("data-id"));
+
+      
+      Evernote.current_notes.remove(Evernote.current_notes.get(note_id));
+      Evernote.container.render();
+  
+      $.ajax({
+        type: "PUT",
+        url: "/notes/" + note_id,
+        data: {note: { notebook_id: notebook_id }},
+        success: function() {
+        
+          Evernote.notebooks.fetch({
+            success: function(){
+              Evernote.container.render();
+            }
+          });
+        }
+      });
+      
+      // update note.notebook_id
+      // fetch new data
+        // Evernote.notebooks -- need to update (to include note move)
+        // Evernote.current_notebook -- need to reselect after updating (to exclude moved note)
+        // Evernote.current_notes -- need to need to be reloaded to exclude moved note
+        
+        // solution: 
+        // remove from Evernote.current_notes
+        // add in Evernote.notebooks.get(notebook_id)
+      
+      // rerender
+    }
+  });
+});
+</script>
