--- a/app/assets/templates/container/container.jst.ejs
+++ b/app/assets/templates/container/container.jst.ejs
@@ -1,3 +1,3 @@
-<div class="notebooks col-md-3"></div>
+<div class="sidebar col-md-3"></div>
 <div class="notes col-md-3"></div>
 <div class="content col-md-6"></div>
